--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.jpa.database=postgresql
-spring.datasource.url=jdbc:postgresql://localhost:5432/octo?user=sa&password=sa
+spring.datasource.url=jdbc:postgresql://localhost:5432/octo1?user=sa&password=sa
 server.port=8080
-spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
