--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,8 @@ dependencies {
     implementation 'org.flywaydb:flyway-core'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
-    compile "io.springfox:springfox-swagger2:${swaggerVersion}"
-    compile "io.springfox:springfox-swagger-ui:${swaggerVersion}"
+    implementation "io.springfox:springfox-swagger2:${swaggerVersion}"
+    implementation "io.springfox:springfox-swagger-ui:${swaggerVersion}"
 
     implementation "org.jetbrains.kotlin:kotlin-reflect"
     runtimeOnly 'org.springframework.boot:spring-boot-devtools'
